# mas_pip

./: Final.rar  Pipfile  README.md  dev.py  main.py  main1.py  pyproject.toml  requirements.txt  setup.sh  utils.py
Final/: main.py
Final/lotti/: seo.json  seo2.json
