[tool.poetry]
name = "mas_pip"
version = "0.1.0"
description = ""
authors = ["alauddin-sabari <aladinsabari@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "^1.22.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
validators = "^0.18.2"
textrazor = "^1.4.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
simplejson = "^3.17.6"
extruct = "^0.13.0"
Wikipedia-API = "^0.5.4"
spacy-streamlit = "^1.0.2"
streamlit-aggrid = "^0.2.2"
Unidecode = "^1.3.2"
google-cloud-language = "^2.3.1"
streamlit = "^1.3.1"
streamlit-lottie = "^0.0.3"
snowballstemmer = "^2.2.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
